Modify cmake to compile shaders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,41 @@ add_subdirectory(external/glfw)
 message(STATUS "Installing fmt via submodules")
 add_subdirectory(external/fmt)
 
+# shader compilation
+find_program(GLSLC glslc HINTS /usr/local/bin)
+
+## find all the shader files under the shaders folder
+file(GLOB_RECURSE GLSL_SOURCE_FILES
+    "${PROJECT_SOURCE_DIR}/resources/*.frag"
+    "${PROJECT_SOURCE_DIR}/resources/*.vert"
+    "${PROJECT_SOURCE_DIR}/resources/*.comp"
+)
+
+## iterate each shader
+foreach(GLSL ${GLSL_SOURCE_FILES})
+    message(STATUS "BUILDING SHADER")
+    get_filename_component(FILE_NAME ${GLSL} NAME)
+    set(SPIRV "${PROJECT_SOURCE_DIR}/resources/${FILE_NAME}.spv")
+    message(STATUS ${GLSL})
+    ##execute glslang command to compile that specific shader
+    add_custom_command(
+        OUTPUT ${SPIRV}
+        COMMAND ${GLSLC} ${GLSL} -o ${SPIRV}
+        DEPENDS ${GLSL})
+    list(APPEND SPIRV_BINARY_FILES ${SPIRV})
+endforeach(GLSL)
+
+add_custom_target(
+    Shaders
+    DEPENDS ${SPIRV_BINARY_FILES}
+)
 
 add_executable(shaderedit src/main.cpp src/window.cpp src/app.cpp src/assets.cpp
-    src/resource_manager.cpp src/vulkan_device.cpp src/pipeline.cpp)
+    src/resource_manager.cpp src/vulkan_device.cpp src/pipeline.cpp src/swap_chain.cpp ${SPIRV_BINARY_FILES})
 
 include_directories("${Vulkan_INCLUDE_DIR}")
 target_link_libraries(shaderedit glfw fmt ${Vulkan_LIBRARIES})
 
 target_compile_options(shaderedit PRIVATE -Wall -Wextra)
+
+
